--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-heroku==0.3.1
 django-reset-migrations==0.4.0
 django-rest-framework==0.1.0
 djangorestframework==3.12.4
+djangorestframework-jwt==1.11.0
 gunicorn==20.1.0
 idna==3.3
 Pillow==8.4.0
